maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:3: error: not found: value random3
                    while (!isOverBaggle()) {x=random3(); {x match 
                                               ^